axum-myroutes/tests/ui/fail_route_attr_empty_args.stderr
error: expected route path as the first argument
  --> tests/ui/fail_route_attr_empty_args.rs:13:11
   |
13 |     #[get()]
   |           ^
